--- a/src/Samples/Toolkit.SampleApp.WPF/Toolkit.SampleApp.WPF.csproj
+++ b/src/Samples/Toolkit.SampleApp.WPF/Toolkit.SampleApp.WPF.csproj
@@ -25,6 +25,7 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+        <PackageReference Include="Esri.Calcite.WPF" Version="0.1.0-preview1" />
         <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     </ItemGroup>
 
